attempt 8 at static.json -- added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://seo-heroku-test.herokuapp.com/",
   "eslintConfig": {
     "extends": "react-app"
   },
